# TouchControl

./: .gitignore  pyproject.toml  requirements.txt
Channelstrip Study/: README.md  daw_scales.json  main.py  mixerlab.kv  requirements.txt
docs/: architecture.md  index.md  mcu-buttons.md  mcu-decoder.md  mcu-fader.md  midi-backend.md
scripts/: decoder_monitor.py  fader_demo.py  kivy_hello.py  list_midi.py  mixer_demo.py
src/touchcontrol/: __init__.py
src/touchcontrol/mcu/: __init__.py  constants.py  decoder.py  encoder.py  events.py  fader.py
src/touchcontrol/midi/: __init__.py  backend.py
src/touchcontrol/model/: __init__.py  channel_state.py  mixer_state.py
src/touchcontrol/ui/: __init__.py  app_mixin.py  app_root.py  channel_strip.py  controls.py  mixer_view.py  settings_view.py  swipe_strip.py  theme.py  touchcontrol.kv
src/touchhui/: __init__.py
tests/: test_decoder.py  test_encoder.py  test_fader.py  test_midi_backend.py  test_smoke.py  test_state.py
